--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-dice",
-  "private": true,
-  "version": "1.0.0",
+  "private": false,
+  "version": "1.4.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,7 +15,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-spring": "^9.7.4"
+    "react-spring": "^9.7.4",
+    "serve": "^14.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -28,5 +29,22 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "index.html",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pagesbydustin/react-dice.git#main-prod"
+  },
+  "keywords": [
+    "react",
+    "game",
+    "dice"
+  ],
+  "author": "By Dustin",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/pagesbydustin/react-dice/issues"
+  },
+  "homepage": "https://github.com/pagesbydustin/react-dice/tree/main-prod#readme"
 }
