--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@real-typer/react": "^2.0.8",
+    "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-spring": "^9.7.4",
+    "react-storage-complete": "^1.1.10",
     "vite": "^5.4.2"
   },
   "devDependencies": {
