--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@real-typer/react": "^2.0.8",
+    "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-spring": "^9.7.4"
+    "react-icons": "^5.3.0",
+    "react-spring": "^9.7.4",
+    "react-storage-complete": "^1.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -25,6 +29,11 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.1"
-  }
+    "vite": "^5.4.2",
+    "serve": "^14.2.3"
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "index.html",
+  "author": "",
+  "license": "MIT"
 }
