--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-spring": "^9.7.4",
-    "react-storage-complete": "^1.1.10"
+    "react-spring": "^9.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -29,8 +28,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.2",
-    "serve": "^14.2.3"
+    "serve": "^14.2.3",
+    "vite": "^5.4.2"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "index.html",
