--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-spring": "^9.7.4"
+    "react-spring": "^9.7.4",
+    "use-local-storage-state": "^19.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
