--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-spring": "^9.7.4",
-    "react-storage-complete": "^1.1.10",
+    "use-local-storage-state": "^19.4.0",
     "vite": "^5.4.2"
   },
   "devDependencies": {
